# mcp

./: Cargo.toml  Dockerfile  README.md
.forgejo/workflows/: ci.yaml
deploy/: deployment.yaml  namespace.yaml  service.yaml
src/: config.rs  main.rs
src/tools/: cluster.rs  flux.rs  mod.rs  observability.rs  version.rs
tests/: version_test.rs
