[package]
name = "goldentooth-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.2", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hyper = "1"
hyper-util = { version = "0", features = ["server", "tokio", "http1", "http2", "service"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
rmcp = { version = "1.2", features = ["client", "transport-io"] }
